# TradePilot

./: .gitignore  README.md
backend/: pyproject.toml  schema.sql
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: journal.py  portfolio.py  recommendations.py  system.py  watchlists.py
backend/app/core/: __init__.py  config.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: audit.py  enums.py  journal.py  market_snapshot.py  position.py  recommendation.py  watchlist.py
backend/app/schemas/: common.py  decision.py  journal.py  market_snapshot.py  position.py  recommendation.py  seed.py  watchlist.py
backend/app/services/: audit.py  market_data.py  mock_market_data.py  portfolio_analysis.py  portfolio_assessment_config.py  potential_engine.py  potential_scoring_config.py  recommendation_engine.py  seed_data.py  swing_scoring_config.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: EmptyState.tsx  FilterBar.tsx  LoadingState.tsx  RecommendationCard.tsx
frontend/src/pages/: Dashboard.tsx  Journal.tsx  Portfolio.tsx  Recommendations.tsx  Watchlist.tsx
frontend/src/utils/: labels.ts
